nhejazi published a site update

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       <nav aria-label="Table of contents"><h2>Table of contents</h2>
         <ul class="book-toc list-unstyled">
 <li><a class="active" href="index.html">Welcome to SER!</a></li>
-<li><a class="" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
+<li><a class="" href="mediation.html"><span class="header-section-number">1</span> Preliminaries on causal mediation analysis</a></li>
 <li><a class="" href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></li>
-<li><a class="" href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
-<li><a class="" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
-<li><a class="" href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></li>
+<li><a class="" href="estimandirl.html"><span class="header-section-number">3</span> How to choose an estimand: Real world example</a></li>
+<li><a class="" href="stochastic.html"><span class="header-section-number">4</span> Stochastic Direct and Indirect Effects</a></li>
+<li><a class="" href="preliminaries-on-semiparametric-estimation.html"><span class="header-section-number">5</span> Preliminaries on semiparametric estimation</a></li>
 <li><a class="" href="estimating-natural-and-interventional-effects.html"><span class="header-section-number">6</span> Estimating natural and interventional effects</a></li>
 <li><a class="" href="estimating-stochastic-effects.html"><span class="header-section-number">7</span> Estimating stochastic effects</a></li>
 <li><a class="" href="references.html">References</a></li>
@@ -63,9 +63,10 @@
 <h1>Welcome to SER!<a class="anchor" aria-label="anchor" href="#welcome-to-ser"><i class="fas fa-link"></i></a>
 </h1>
 <p>This open source, reproducible vignette accompanies a half-day workshop on
-modern methods for <em>causal mediation analysis</em>, given at the <a href="">SER 2021
-Meeting</a> on Monday, 24 May 2021. While we encourage use of this <code>bookdown</code>
-site, for convenience, we have also made these workshop materials <a href="https://code.nimahejazi.org/ser2021_mediation_workshop/ser2021mediation.pdf">available in
+modern methods for <em>causal mediation analysis</em>, given at the <a href="https://epiresearch.org/annual-meeting/2021-meeting/workshop/">SER 2021
+Meeting</a> on
+Monday, 24 May 2021. While we encourage use of this <code>bookdown</code> site, for
+convenience, we have also made these workshop materials <a href="https://code.nimahejazi.org/ser2021_mediation_workshop/ser2021mediation.pdf">available in
 PDF</a>.</p>
 <div id="about" class="section level2">
 <h2>
@@ -423,7 +424,7 @@ Data</a>.</p>
 </div>
   <div class="chapter-nav">
 <div class="empty"></div>
-<div class="next"><a href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></div>
+<div class="next"><a href="mediation.html"><span class="header-section-number">1</span> Preliminaries on causal mediation analysis</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav">
@@ -458,7 +459,7 @@ Data</a>.</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 27, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 29, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
