--- a/estimandirl.html
+++ b/estimandirl.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Chapter 4 How to choose an estimand: Real world example | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
+<title>Chapter 3 How to choose an estimand: Real world example | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
 <meta name="author" content="Iván Díaz, Nima Hejazi, Kara Rudolph">
 <!-- JS --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.2"></script><script src="https://kit.fontawesome.com/6ecbd6c532.js" crossorigin="anonymous"></script><script src="libs/jquery-3.5.1/jquery-3.5.1.min.js"></script><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet">
@@ -44,11 +44,11 @@
       <nav aria-label="Table of contents"><h2>Table of contents</h2>
         <ul class="book-toc list-unstyled">
 <li><a class="" href="index.html">Welcome to SER!</a></li>
-<li><a class="" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
+<li><a class="" href="mediation.html"><span class="header-section-number">1</span> Preliminaries on causal mediation analysis</a></li>
 <li><a class="" href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></li>
-<li><a class="" href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
-<li><a class="active" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
-<li><a class="" href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></li>
+<li><a class="active" href="estimandirl.html"><span class="header-section-number">3</span> How to choose an estimand: Real world example</a></li>
+<li><a class="" href="stochastic.html"><span class="header-section-number">4</span> Stochastic Direct and Indirect Effects</a></li>
+<li><a class="" href="preliminaries-on-semiparametric-estimation.html"><span class="header-section-number">5</span> Preliminaries on semiparametric estimation</a></li>
 <li><a class="" href="estimating-natural-and-interventional-effects.html"><span class="header-section-number">6</span> Estimating natural and interventional effects</a></li>
 <li><a class="" href="estimating-stochastic-effects.html"><span class="header-section-number">7</span> Estimating stochastic effects</a></li>
 <li><a class="" href="references.html">References</a></li>
@@ -61,11 +61,11 @@
 </div>
   </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><div id="estimandirl" class="section level1">
 <h1>
-<span class="header-section-number">4</span> How to choose an estimand: Real world example<a class="anchor" aria-label="anchor" href="#estimandirl"><i class="fas fa-link"></i></a>
+<span class="header-section-number">3</span> How to choose an estimand: Real world example<a class="anchor" aria-label="anchor" href="#estimandirl"><i class="fas fa-link"></i></a>
 </h1>
 <div id="comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud" class="section level2">
 <h2>
-<span class="header-section-number">4.1</span> Comparative effectivness of two medications for opioid use disorder (OUD)<a class="anchor" aria-label="anchor" href="#comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud"><i class="fas fa-link"></i></a>
+<span class="header-section-number">3.1</span> Comparative effectivness of two medications for opioid use disorder (OUD)<a class="anchor" aria-label="anchor" href="#comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud"><i class="fas fa-link"></i></a>
 </h2>
 <div class="inline-figure"><img src="img/ctndag.png" width="100%" style="display: block; margin: auto;"></div>
 <p><em>Motivation</em>: Opposite overall treatment effects for homeless versus
@@ -73,11 +73,11 @@ nonhomeless participants.</p>
 <div class="inline-figure"><img src="img/tmleesttotal.png" width="50%" style="display: block; margin: auto;"></div>
 <div id="getting-specific-about-the-question" class="section level3">
 <h3>
-<span class="header-section-number">4.1.1</span> Getting specific about the question<a class="anchor" aria-label="anchor" href="#getting-specific-about-the-question"><i class="fas fa-link"></i></a>
+<span class="header-section-number">3.1.1</span> Getting specific about the question<a class="anchor" aria-label="anchor" href="#getting-specific-about-the-question"><i class="fas fa-link"></i></a>
 </h3>
-<p>To what extent does the indirect effect through mediators of adherence, pain,
-and depressive symptoms explain the differences in treatment effects on OUD
-relapse for homeless and nonhomeless individuals?</p>
+<p>To what extent does the indirect effect through mediators of adherence, pain, and
+depressive symptoms explain the differences in treatment effects on OUD relapse
+for homeless and nonhomeless individuals?</p>
 <p>What estimand do we want?</p>
 <ul>
 <li>Can we set <span class="math inline">\(M=m\)</span> (i.e., same value) for everyone?</li>
@@ -107,14 +107,14 @@ relapse for homeless and nonhomeless individuals?</p>
 </div>
 </div>
   <div class="chapter-nav">
-<div class="prev"><a href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></div>
-<div class="next"><a href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></div>
+<div class="prev"><a href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></div>
+<div class="next"><a href="stochastic.html"><span class="header-section-number">4</span> Stochastic Direct and Indirect Effects</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav">
-<li><a class="nav-link" href="#estimandirl"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
+<li><a class="nav-link" href="#estimandirl"><span class="header-section-number">3</span> How to choose an estimand: Real world example</a></li>
 <li>
-<a class="nav-link" href="#comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud"><span class="header-section-number">4.1</span> Comparative effectivness of two medications for opioid use disorder (OUD)</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#getting-specific-about-the-question"><span class="header-section-number">4.1.1</span> Getting specific about the question</a></li></ul>
+<a class="nav-link" href="#comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud"><span class="header-section-number">3.1</span> Comparative effectivness of two medications for opioid use disorder (OUD)</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#getting-specific-about-the-question"><span class="header-section-number">3.1.1</span> Getting specific about the question</a></li></ul>
 </li>
 </ul>
 
@@ -133,7 +133,7 @@ relapse for homeless and nonhomeless individuals?</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 27, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 29, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
